--- a/public/modules/modals/views/modals.view.html
+++ b/public/modules/modals/views/modals.view.html
@@ -1,21 +1,21 @@
 <div data-ng-controller="ModalsController as modal">
-	<div class="modal-header">
-		<h3 class="modal-title">{{modal.renderModalData().warning}}</h3>
-	</div>
-	<div class="modal-body">
-		<p>{{modal.renderModalData().title}}</p>
-	</div>
-	<div class="modal-footer">
-		<button class="btn btn-primary" type="button"
-		  data-ng-click="modal.firstWayHandle()">
-          {{modal.renderModalData().firstWay}}
-        </button>
-		<button class="btn btn-warning" type="button"
-		  data-ng-click="modal.secondWayHandle()"
-          data-ng-disabled="false">
-          {{modal.renderModalData().secondWay}}
-      </button>
-	</div>
+  <div class="modal-header">
+    <h3 class="modal-title">{{modal.renderModalData().title}}</h3>
+  </div>
+  <div class="modal-body">
+    <p>{{modal.renderModalData().warning}}</p>
+  </div>
+  <div class="modal-footer">
+    <button class="btn btn-primary" type="button"
+      data-ng-click="modal.firstWayHandle()">
+      {{modal.renderModalData().firstHandler}}
+    </button>
+    <button class="btn btn-warning" type="button"
+      data-ng-click="modal.secondWayHandle()"
+      data-ng-disabled="false">
+      {{modal.renderModalData().secondHandler}}
+    </button>
+  </div>
 </div>
 
 
