--- a/public/modules/core/less/_core.variables.less
+++ b/public/modules/core/less/_core.variables.less
@@ -1,16 +1,15 @@
-/* Common colors */
 
+// ---------------- BASE COLOR ----------------
 @base-color: #1ab394;
 
-
-/* Typography */
-
+// ---------------- TYPOGRAPHY ----------------
 @light-text: #fff;
 @link-color: #1c84c6;
 @border-color: #D6D6D6;
 @main-bg-color: #F5F5F5;
 @error-message-color: #a94442;
 
+// ---------------- COLORS ----------------
 /* naming from http://www.color-blindness.com/color-name-hue/ */
 @color-dark-pink: #e84f5e;
 @color-wewak: #f1959e;
@@ -27,9 +26,7 @@
 @color-jordy-blue: #77b5dd;
 @color-lavender: #e8f2f9;
 
-
-/* Variables for authorization pages */
-
+// ---------------- AUTHORIZATION PAGES ----------------
 @auth-bg-img: url('/modules/users/img/backgrounds/bg-1.jpg');
 @logo-lg-light: url('/modules/users/img/logo-lg-light.png');
 @logo-lg-dark: url('/modules/users/img/logo-lg-dark.png');
@@ -38,9 +35,5 @@
 @auth-aside-bg: #fff;
 @intro-color: #fff;
 
-
-/* Screens */
-
+// ---------------- SCREENS ----------------
 @mobile-display: ~"only screen and (max-width: 667px)";
-
-
